Prepared web page on React.

--- a/app-client-web/src/jsMain/resources/index.html
+++ b/app-client-web/src/jsMain/resources/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>My Team Player</title>
+    <link rel="icon" href="music_video.svg" type="image/svg"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@800&family=Roboto+Serif:ital,opsz,wght@1,8..144,800;1,8..144,900&display=swap" rel="stylesheet">
 </head>
-<body>
-<div id="root"></div>
+<body id="root">
 <script src="app-client-web.js"></script>
 </body>
 </html>
